# opensense

./: .editorconfig  .env.admin.example  .env.e2e.example  .env.example  .env.langfuse.example  .flake8  .gitignore  Dockerfile  LICENCE.md  README.md  chainlit.md  docker-compose.yml  launch.sh  mypy.ini  package-lock.json  package.json  playwright.config.ts  pyproject.toml  sense-full-suite-docker-compose.yml
.chainlit/: config.toml
docs/: AI_CONTEXT.md  CODE_FLOW.md  DEVELOPMENT.md  FEATURE_FLAGS.md  IMPROVEMENTS.md  db-init.sql  sense-admin-init-first-superuser.sql
docs/cloud/: DEPLOYMENT.md
docs/diagrams/: architecture-sense-example-aws.drawio  sense-dependencies.drawio  sense-high-level-overview.drawio
docs/local/: LOCAL_SETUP.md
docs/prompts/: chat_prompt_v1.txt  chat_prompt_v2.txt
public/: app.js  reduce-height-for-masthead.css  stylesheet.css
regressions/: auth.setup.ts  sense_page.ts
regressions/e2e/: chat.spec.ts
regressions/features/: chat_settings.spec.ts  download_feature.spec.ts  edit_message.spec.ts
regressions/utils/: auth.ts  parse_csv.ts
scripts/: changelogs.py  init_metabase.sh  purge_csv.sh  release_and_deploy.sh
scripts/chainlit_sql_inits/: create_db_and_tables.sql
scripts/full_suite_sql_inits/: langfuse.sql  metabase.sql  sense.sql  sense_admin.sql
sense/: main.py
sense/common/: config.py  llm.py  monitoring.py  rate_limiter.py  storage_clients.py
sense/metabase/: agent_guided.py  authz.py  consts.py  data.py  exceptions.py  guardrail.py  metabase_api.py  server.py  tools.py
sense/migrations/: 0001_initial.sql  (+1 more)
(+8 files in other folders)
